# ml-engineering

./: .gitignore  README.md
fraud-detection-pipeline/: README.md  pyproject.toml
fraud-detection-pipeline/data/: README.md
fraud-detection-pipeline/docs/: artifact-security.md  dataset.md  run-log.md
fraud-detection-pipeline/docs/features/: step-1-project-scaffold-and-one-batch-baseline.md  step-2-training-evaluation.md  step-3-class-imbalance-handling.md  step-4-run-logging-and-artifacts.md  step-5-threshold-tuning-for-recall.md  step-6-feature-engineering-validation-split.md  step-7-hyperparameter-tuning.md
fraud-detection-pipeline/src/fraud_detection/: artifacts.py  cli.py  data.py  features.py  metrics.py  models.py  thresholds.py  training.py  tuning.py
fraud-detection-pipeline/tests/: test_artifacts.py  test_cli.py  test_cli_artifacts.py  test_cli_tuning.py  test_data.py  test_features.py  test_metrics.py  test_models.py  test_multi_model_smoke.py  test_review_blockers.py  test_threshold_artifacts.py  test_threshold_cli.py  test_thresholds.py  test_training.py  test_training_metrics.py  test_tuning.py
gameboard-bot/core/: Cargo.toml
gameboard-bot/core/scripts/: eval_tune.sh
gameboard-bot/core/src/: arena.rs  books.rs  checkers.rs  eval.rs  features.rs  game.rs  lib.rs  net.rs  search.rs  state.rs  wallchess.rs
gameboard-bot/core/tests/: golden.rs  golden_snapshot.txt
indonesian-banking-asr/: .gitignore  README.md  pyproject.toml
indonesian-banking-asr/data/templates/: banking_intents.yaml
indonesian-banking-asr/docs/features/: step-1-synthetic-banking-dataset.md  step-10-whisper-baseline-postprocessing.md  step-11-augmented-whisper-evaluation.md  step-12-babelspeech-real-data-grounding.md  step-13-combined-training-manifest.md  step-14-whisper-tiny-combined-finetune.md  step-15-mlx-large-v3-combined-finetune.md  step-16-mlx-large-v3-scaleup-experiments.md  step-17-muon-optimizer-probe.md  step-18-guarded-optimizer-experiments.md  step-19-whisper-style-adamw-schedule.md  step-2-synthetic-text-generator-and-validator.md  step-20-guarded-sgd-scaleup-evaluation.md  step-21-10h-80-20-data-procurement.md  step-22-10h-baseline-evaluation.md  step-23-entity-aware-postprocessing-10h.md  step-24-mlx-whisper-lora-smoke.md  step-25-10h-lora-scaleup-evaluation.md  step-26-baseline-vs-lora-10h-slice-comparison.md  step-27-last8-lora-smoke.md  step-28-last8-lora-500step-scaleup.md  step-29-banking-only-lora-200step.md  step-3-yaml-catalog-entity-sampler-gemini-prompt.md  step-30-banking-only-lora-lr5e-5.md  step-31-banking-only-lora-lr1e-4.md  step-32-banking-only-lr1e-4-full-split-eval.md  step-33-fullmix-lora-lr1e-4.md  step-34-fullmix-100step-regression-probe.md  step-35-fullmix-lr5e-5-regression-probe.md  step-36-fullmix-last4-lora-scope-probe.md  step-37-fullmix-rank4-lora-regularization.md  step-38-fullmix-rank2-lora-regularization.md  step-39-fullmix-rank4-alpha4-strength-probe.md  (+17 more)
kaggle-comp/house-prices-advanced-regression-techniques/: .gitignore  README.md  pyproject.toml
mini-wallchess-bot/core/: Cargo.toml
mini-wallchess-bot/wasm/: Cargo.toml
ml-production-ecosystem/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.production.yaml  docker-compose.yml  pyproject.toml
ml-production-ecosystem/01-foundation/: README.md
ml-production-ecosystem/02-production-patterns/: README.md
ml-production-ecosystem/03-million-scale/: README.md
ml-production-ecosystem/03-scale-and-reliability/: README.md
ml-production-ecosystem/04-platform-and-cloud/: README.md
ml-production-ecosystem/configs/: foundation-recommender.yaml  generic-classifier-command.yaml  local-lifecycle-demo.yaml  reasoning-local-smoke.yaml  reasoning-provider-template.yaml
ml-production-ecosystem/docs/: learning-roadmap.md  lifecycle-easy-path.md  local-lifecycle-runbook.md  mlops-tools-map.md  rules-policy.md  run-log.md
ml-production-ecosystem/reports/: metrics.json
ml-production-ecosystem/scripts/: platform_apply_runtime.py  smoke-local-deployment.sh  smoke-local-lifecycle.sh  smoke-reasoning-post-training.sh  smoke-test-foundation-api.sh  validate-enterprise-readiness.sh  validate-full-suite.sh  validate-production-patterns.sh
ml-production-ecosystem/shared/: __init__.py
ml-production-ecosystem/tests/: test_airflow_retraining_dag.py  test_alerting_rules.py  test_approval.py  test_autoscaling_decision.py  test_backpressure.py  test_batch_recommendation.py  test_burn_rate_alert.py  test_burn_rate_alert_dispatch.py  test_canary_decision.py  test_canary_router.py  test_cloud_provider_adapters.py  test_cnn_segmentation_retraining.py  test_continual_learning.py  test_continual_summary.py  test_cost_estimate.py  test_data_ingestion.py  test_deployment_demo.py  test_deployment_manifest.py  test_drift_detection.py  test_foundation_structure.py  test_generic_classifier_command.py  test_goal_readiness.py  test_lifecycle_demo.py  test_lifecycle_graph.py  test_lifecycle_status.py  test_load_aggregate.py  test_local_ci.py  test_local_kubernetes.py  test_local_lifecycle_demo_config.py  test_local_lifecycle_runbook.py  test_local_platform.py  test_local_scheduler.py  test_local_secret_injections.py  test_model_contract_manifest.py  test_monitoring_loop.py  test_monitoring_stack.py  test_offline_validation.py  test_orchestrator_cli.py  test_platform_and_cloud_scaffold.py  test_platform_apply.py  (+32 more)
webam-rts-effect/: .gitignore  README.md  pyproject.toml
webam-rts-effect/assets/: effect.json  glasses.ppm
webam-rts-effect/tests/: test_analyzer.py  test_app.py  test_cli.py  test_components.py  test_config.py  test_dataset_paths.py  test_debug_overlay.py  test_effect_editor.py  test_effects.py  test_hand_tracking.py  test_mediapipe_models.py  test_outputs.py  test_state.py  test_training.py  test_video_filters.py
webam-rts-effect/webcam_effect/: __init__.py  analyzer.py  app.py  assets.py  audio.py  camera.py  cli.py  components.py  debug_overlay.py  effects.py  hand_tracking.py  outputs.py  state.py  yolo_models.py
webam-rts-effect/webui/: package.json  vite.config.ts
(+662 files in other folders)
