[project]
name = "ml-production-ecosystem"
version = "0.1.0"
description = "Shared MLOps learning architecture for production ML engineering stages."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "confluent-kafka>=2.5.0",
    "fastapi>=0.115.0",
    "psycopg[binary]>=3.2.0",
    "PyYAML>=6.0.2",
    "uvicorn>=0.32.0",
]

[project.scripts]
foundation-prepare-data = "recommendation.data:main"
foundation-train-recommender = "recommendation.train:main"
foundation-train-from-config = "recommendation.train:config_main"
foundation-list-runs = "recommendation.train:list_runs_main"
foundation-list-models = "recommendation.train:list_models_main"
foundation-set-active-model = "recommendation.train:set_active_model_main"
foundation-recommend = "recommendation.predict:main"
foundation-batch-recommend = "recommendation.batch:main"
foundation-serve-recommender = "recommendation.api:main"
foundation-rt-demo = "recommendation.rt_demo:main"
production-batch-recommend = "production_patterns.batch_inference:main"
production-retrain = "production_patterns.retraining:main"
production-monitor = "production_patterns.monitoring_loop:main"
production-scheduled-retrain = "production_patterns.scheduled_retraining:main"
production-rollback-model = "production_patterns.rollback:main"
production-release-summary = "production_patterns.release_summary:main"
scale-load-test = "scale_reliability.load_test:main"
production-load-test = "scale_reliability.load_test:main"

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "01-foundation", "02-production-patterns", "03-scale-and-reliability"]


[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["shared", "shared.deployment", "shared.model_storage", "shared.monitoring", "shared.observability", "recommendation", "production_patterns", "scale_reliability"]
package-dir = {recommendation = "01-foundation/recommendation", production_patterns = "02-production-patterns/production_patterns", scale_reliability = "03-scale-and-reliability/scale_reliability"}
