[project]
name = "house-prices-advanced-regression-techniques"
version = "0.1.0"
description = "Reusable regression pipeline for Kaggle House Prices."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "joblib>=1.3.0",
    "lightgbm>=4.0.0",
    "numpy>=1.26.0",
    "optuna>=4.8.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.4.0",
    "xgboost>=3.2.0",
]

[project.scripts]
house-prices-train = "house_prices.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/house_prices"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
