[project]
name = "{{package_name}}"
version = "0.1.0"
description = "ASR served model scaffold."
requires-python = ">=3.11"
dependencies = ["fastapi>=0.115.0", "pydantic>=2.0.0", "uvicorn>=0.32.0"]

[dependency-groups]
dev = ["pytest>=8.0.0", "httpx>=0.28.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
